[gd_scene load_steps=7 format=2]

[ext_resource path="res://page/navigation/speechTherapistMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/DejaVuFont.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Main"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="Main/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Control/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 2 )
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statsButton" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 1024.0
margin_bottom = 254.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Statistiques"

[node name="wordsChoice" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 1024.0
margin_bottom = 336.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Choix des mots"

[node name="structButton" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 1024.0
margin_bottom = 418.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Choix de la structure Syllabique "

[node name="retour" type="Button" parent="."]
anchor_left = 0.0154563
anchor_top = 0.026855
anchor_right = 0.0984641
anchor_bottom = 0.168522
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/statsButton" to="." method="_on_statsButton_pressed"]
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/wordsChoice" to="." method="_on_wordsChoice_pressed"]
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/structButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="retour" to="." method="_on_back_pressed"]
